--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier \"src/**/*.{js,html,jsx}\" --write"
+    "format": "prettier \"src/**/*.{js,html,jsx,ts,tsx}\" --write"
   },
   "eslintConfig": {
     "extends": "react-app"
